# dm-BigMuff

./: .gitignore  README.md
.github/workflows/: build.yml  dm-big-muff.mk
big_muff/: Cargo.toml
big_muff/src/: clipper.rs  lib.rs  op_amp.rs  op_amp1.rs  op_amp2.rs  op_amp3.rs  params.rs  smooth_parameters.rs  tone.rs
big_muff/src/clipper/: fir_filter.rs
big_muff/src/params/: smooth.rs
big_muff/src/shared/: inverting_op_amp.rs  non_inverting_op_amp.rs  one_pole_filter.rs
big_muff/src/shared/inverting_op_amp/: bilinear_transform.rs
big_muff/src/shared/non_inverting_op_amp/: bilinear_transform.rs  biquad_filter.rs
lv2/: Cargo.toml
lv2/dm-BigMuff.lv2/: dm-BigMuff.ttl  manifest.ttl  modgui.ttl
lv2/dm-BigMuff.lv2/modgui/: stylesheet-dm-bigmuff.css
lv2/src/: lib.rs
nih-plug/: Cargo.toml
nih-plug/src/: big_muff_parameters.rs  editor.rs  lib.rs
nih-plug/src/editor/: ui_data.rs
profiling/: Cargo.toml
profiling/benches/: big_muff_bench.rs  sd1_bench.rs
profiling/src/: main.rs
scripts/: build-lv2-for-mod-desktop-mac.sh  build-vst3-for-mac.sh
sketches/fir-filter/: fir.py
sketches/transfer-functions/: clipper.asc  op_amp1.asc  op_amp1.py  op_amp2.asc  op_amp2.py  op_amp3.asc  op_amp3.py  tone.asc  tone.py
